post video example

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -13,5 +13,8 @@
       <button ng-click='lsc.setLocalStorage()'>Set</button>
       <button ng-click='lsc.getLocalStorage()'>Get</button>
     </div>
+    <div ng-controller='OtherController as oc'>
+      <button ng-click='oc.checkLocalStorage();'>Check</button>
+    </div>
   </body>
 </html>
